# Layla-math

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: lib.rs  matirs.rs  setting.rs  vector.rs
src/cuda/: lib.cu
src/cuda/f32/: vector.cu
src/cuda/f64/: vector.cu
tests/: cuda_test.rs  matrix_test.rs  vector_test.rs
