[package]
name = "layla-math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
layla-log = "0.1.0"

[lib]
name = "layla_math"

[dependencies.pyo3]
version = "0.21.1"
features = ["extension-module", "auto-initialize"]